--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ryanburnette/express-force-canonical",
-  "version": "2.1.1",
-  "description": "Express or Node.js HTTP middleware to force a canonical host.",
+  "version": "3.0.0",
+  "description": "Express.js HTTP middleware to force HTTPS and a canonical host.",
   "main": "index.js",
   "author": "Ryan Burnette <ryan.burnette@gmail.com>",
   "license": "ISC",
